2004-03-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: segfault when reading permissions in config file

2004-03-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* cookies: filecrc (uploaded\downloaded file crc)
	* bugfix: some cookies not working because of wrong context pointer

2004-03-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* cookies: userpwd (user path, relative to home dir)
	* cookies: userpath (user path, absolute in filesystem)
	* cookies: filepath (uploaded\downloaded file path, absolute)
	* bugfix: event POSTDOWNLOAD not called
	* bugfix: wrong file size for files > 4Go (visual) (closes: #920425)
	* feature: added strlcat default implementation if missing
	* security: sources passed to 'rats' and 'pscan'
	* security: some buffers changed to be dynamic, replace strcat with strlcat

2004-03-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: custom site commands and hooks (cscripts) now use cookies as arguments
	* doc: new section on custom commands
	* wzd_misc.c: new function get_bandwidth()
	* feature: get/set server variables (wzd_vars.c, wzd_vars.h)
	* siteconfig: use new api to server variables
	* tcl: use new api to server variables, function tcl_vars

2004-03-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* debian: debian packages restarted from scratch
	* bugfix: removed compilations speed-ups, conflicting with openssl

	* IMPORTANT: installation path changed for *.txt, and  users files

2004-03-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: fixed build on visual
	* feature: added tcl module to visual project

2004-03-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* configure.in: openssl is now autodetected

2004-03-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* backends: pam backend started
	* configure.in: berkeley db headers and libs detection

2004-02-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: first implementation of protocols (used in custom
        scripts and custom site commands)