@@ -144,7 +144,7 @@ int data_execute(wzd_context_t * context, fd_set *fdr, fd_set *fdw)
   wzd_user_t * user;
 
 #ifdef BACKEND_STORAGE
-  if (mainConfig->backend.backend_storage==0) {
+  if (mainConfig->backend.backend_storage==1) {
     user = GetUserByID(context->userid);
   } else
 #endif
